--- a/lib/aitriage_core/asset/language/en_US.json
+++ b/lib/aitriage_core/asset/language/en_US.json
@@ -1,4 +1,6 @@
 {
   "app_name": "App name",
-  "hello": "Hello"
+  "sign_up_title": "Sign up fo a free trial",
+  "login_suggest": "Already have an account?",
+  "log_in": "Log in"
 }
