--- a/lib/aitriage_core/asset/language/vi_VN.json
+++ b/lib/aitriage_core/asset/language/vi_VN.json
@@ -1,4 +1,6 @@
 {
-  "app_name": "Tên app",
-  "hello": "Hello"
+  "app_name": "App name",
+  "sign_up_title": "Sign up fo a free trial",
+  "login_suggest": "Already have an account?",
+  "log_in": "Log in"
 }
