--- a/lib/aitriage_core/asset/language/en_US.json
+++ b/lib/aitriage_core/asset/language/en_US.json
@@ -2,5 +2,14 @@
   "app_name": "App name",
   "sign_up_title": "Sign up fo a free trial",
   "login_suggest": "Already have an account?",
-  "log_in": "Log in"
+  "log_in": "Log in",
+  "welcome_back" : "Welcome back",
+  "enter_your_details" : "Welcome back! Please enter your details.",
+  "email_label" : "Email",
+  "email_hint" : "Enter your email",
+  "password_label" : "Password",
+  "password_hint" : "Enter your password",
+  "remember_me" : "Remember me",
+  "forgot_password" : "Forgot password?",
+  "sign_in" : "Sign in"
 }
