setup login/logout

--- a/lib/aitriage_core/asset/language/en_US.json
+++ b/lib/aitriage_core/asset/language/en_US.json
@@ -11,5 +11,19 @@
   "password_hint" : "Enter your password",
   "remember_me" : "Remember me",
   "forgot_password" : "Forgot password?",
-  "sign_in" : "Sign in"
+  "forgot_password_label" : "No worries, we’ll send you reset instructions.",
+  "sign_in" : "Sign in",
+  "dont_have_account" : "Don’t have an account?",
+  "pin_code_label" : "PIN code",
+  "pin_code_hint" : "Enter your pincode",
+  "use_another_account" : "Use another account",
+  "back_to_login" : "Back to log in",
+  "reset_password" : "Reset password",
+  "check_your_email" : "Check your email",
+  "we_sent_password" : "We sent a password reset link to",
+  "open_email_app" : "Open email app",
+  "didnt_receive_email" : "Didn’t receive the email?",
+  "click_to_resend" : "Click to resend",
+  "password_reset" : "Password reset",
+  "password_reset_success" : "Your password has been successfully reset."
 }
