--- a/lib/aitriage_core/asset/language/vi_VN.json
+++ b/lib/aitriage_core/asset/language/vi_VN.json
@@ -5,8 +5,8 @@
   "log_in": "Log in",
   "welcome_back" : "Welcome back",
   "enter_your_details" : "Welcome back! Please enter your details.",
-  "email_label" : "Email",
-  "email_hint" : "Enter your email",
+  "email_label" : "Email / Phone number",
+  "email_hint" : "Enter your email or phone number",
   "password_label" : "Password",
   "password_hint" : "Enter your password",
   "remember_me" : "Remember me",
@@ -25,5 +25,8 @@
   "didnt_receive_email" : "Didn’t receive the email?",
   "click_to_resend" : "Click to resend",
   "password_reset" : "Password reset",
-  "password_reset_success" : "Your password has been successfully reset."
+  "password_reset_success" : "Your password has been successfully reset.",
+  "sign_up" : "Sign up",
+  "sign_in_with_email": "Sign in with Email",
+  "sign_in_with_pin_code" : "Sign in with PIN code"
 }
