--- a/lib/aitriage_core/asset/language/en_US.json
+++ b/lib/aitriage_core/asset/language/en_US.json
@@ -31,8 +31,12 @@
   "enter_new_password_hint": "Enter your new password",
   "confirm_pass_word_title": "Confirm password",
   "confirm_password_hint": "Confirm your password",
-  "password_reset_success" : "Your password has been successfully reset.",
   "sign_up" : "Sign up",
   "sign_in_with_email": "Sign in with Email",
-  "sign_in_with_pin_code" : "Sign in with PIN code"
+  "sign_in_with_pin_code" : "Sign in with PIN code",
+  "minimum_character": "Minimum 8 characters",
+  "at_least_lowercase_letter": "At least 1 lowercase letter",
+  "at_least_uppercase_letter": "At least 1 UPPERCASE letter",
+  "at_least_number": "At least 1 number",
+  "at_least_special_character": "At least 1 special character"
 }
