--- a/lib/aitriage_core/asset/language/vi_VN.json
+++ b/lib/aitriage_core/asset/language/vi_VN.json
@@ -44,5 +44,6 @@
   "intro_label_1": "Patient management software, support on any device",
   "intro_label_2": "Intelligent disease prediction and risk stratification",
   "intro_label_3": "Accurate and Reliable",
-  "intro_label_4": "Facility Management"
+  "intro_label_4": "Facility Management",
+  "get_started_with_aitriage": "Get started with aiTriage"
 }
