--- a/lib/aitriage_core/asset/language/en_US.json
+++ b/lib/aitriage_core/asset/language/en_US.json
@@ -5,7 +5,7 @@
   "log_in": "Log in",
   "welcome_back" : "Welcome back",
   "enter_your_details" : "Welcome back! Please enter your details.",
-  "email_label" : "Email / Phone number",
+  "email_label" : "Email",
   "email_hint" : "Enter your email or phone number",
   "password_label" : "Password",
   "password_hint" : "Enter your password",
@@ -26,7 +26,7 @@
   "click_to_resend" : "Click to resend",
   "password_reset" : "Password reset",
   "password_reset_success" : "Your password has been successfully reset.",
-  "forget_password_email_hint": "Enter the email you used o register with",
+  "forget_password_email_hint": "Enter the email you used to register with",
   "set_new_password_title": "Set new password",
   "enter_new_password_hint": "Enter your new password",
   "confirm_pass_word_title": "Confirm password",
