--- a/lib/aitriage_core/asset/language/vi_VN.json
+++ b/lib/aitriage_core/asset/language/vi_VN.json
@@ -1,6 +1,6 @@
 {
   "app_name": "App name",
-  "sign_up_title": "Sign up fo a free trial",
+  "sign_up_title": "Sign up for a free trial",
   "login_suggest": "Already have an account?",
   "log_in": "Log in",
   "welcome_back" : "Welcome back",
