--- a/lib/aitriage_core/asset/language/en_US.json
+++ b/lib/aitriage_core/asset/language/en_US.json
@@ -20,7 +20,7 @@
   "back_to_login" : "Back to sign in",
   "reset_password" : "Reset password",
   "check_your_email" : "Check your email",
-  "we_sent_password" : "We sent a password reset link to",
+  "we_sent_password" : "We sent a verification code to",
   "open_email_app" : "Open email app",
   "didnt_receive_email" : "Didn’t receive the email?",
   "click_to_resend" : "Click to resend",
@@ -71,6 +71,7 @@
   "password" : "Password",
   "password_placeholder" : "Choose a password",
   "submit" : "Submit",
-  "we_sent_verification_code" : "We sent a verification code",
-  "verify_email_title" : "Verify email"
+  "we_sent_verification_code" : "We sent a verification code to",
+  "verify_email_title" : "Verify email",
+  "resend_email" : "Resend successfully"
 }
