--- a/lib/aitriage_core/asset/language/vi_VN.json
+++ b/lib/aitriage_core/asset/language/vi_VN.json
@@ -6,6 +6,7 @@
   "welcome_back" : "Welcome back",
   "enter_your_details" : "Welcome back! Please enter your details.",
   "email_label" : "Email",
+  "email_label_sign_in" : "Email / Phone number",
   "email_hint" : "Enter your email or phone number",
   "password_label" : "Password",
   "password_hint" : "Enter your password",
